--- a/sim.ipynb
+++ b/sim.ipynb
@@ -122,8 +122,8 @@
     "action_noise = NormalActionNoise(mean=np.zeros(n_actions), sigma=0.1 * np.ones(n_actions))\n",
     "\n",
     "model = TD3(\"MultiInputPolicy\", env, buffer_size=100000, action_noise=action_noise, verbose=1, learning_starts=0)\n",
-    "collect_data(env, model, 1, 30)\n",
-    "#model.save_replay_buffer(\"data/td3_expert_grasp\")\n",
+    "collect_data(env, model, 10, 30)\n",
+    "model.save_replay_buffer(\"data/td3_expert_grasp\")\n",
     "\n",
     "print(\"start learning\")\n",
     "for i in range(3):\n",
