--- a/sim.ipynb
+++ b/sim.ipynb
@@ -74,7 +74,7 @@
     "            observation = env.get_observation() #env.get_observation_stacked()\n",
     "            next_observation, reward, done, info = env.step(action)\n",
     "            if info[accept_trajectory_key] and j > num_steps:\n",
-    "                reward = reward/10\n",
+    "                reward = reward/100\n",
     "            rewards.append(reward)\n",
     "            model.replay_buffer.add(observation, next_observation, action, reward, done, [{}])\n",
     "\n",
@@ -88,12 +88,12 @@
     "\n",
     "        if info[accept_trajectory_key]:\n",
     "            if False:\n",
-    "                print(\"num_timesteps: \", num_steps)\n",
+    "                print(\"num_timesteps: \", num_steps, \" reward: \", sum(rewards))\n",
     "                #print(traj[\"observations\"])\n",
     "            num_success += 1\n",
     "            num_saved += 1\n",
     "        if num_saved%100 == 0:\n",
-    "            print(f\"num_trajectories: {num_saved} success rate: {num_success/num_attempts} Reward: {sum(rewards)}\")\n",
+    "            print(f\"num_trajectories: {num_saved} success rate: {num_success/num_attempts}\")\n",
     "\n",
     "    print(\"success rate: {}\".format(num_success / (num_attempts)))"
    ]
@@ -102,49 +102,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:25: UserWarning: \u001b[33mWARN: It seems a Box observation space is an image but the upper and lower bounds are not in [0, 255]. Generally, CNN policies assume observations are within that range, so you may encounter an issue if the observation values are not.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
-      "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Widow250PickPlaceEnv' object has no attribute 'get_observation_stacked'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m COLLECT\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m COLLECT:\n\u001b[0;32m---> 23\u001b[0m     \u001b[43mcollect_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgrasp\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgrasp_success_target\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4000\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     model\u001b[38;5;241m.\u001b[39msave_replay_buffer(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/td3_expert_grasp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "Cell \u001b[0;32mIn[1], line 31\u001b[0m, in \u001b[0;36mcollect_data\u001b[0;34m(env, model, policy, target, num_trajectories, num_timesteps)\u001b[0m\n\u001b[1;32m     29\u001b[0m action \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mnormal(scale\u001b[38;5;241m=\u001b[39mnoise, size\u001b[38;5;241m=\u001b[39m(env_action_dim,))\n\u001b[1;32m     30\u001b[0m action \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mclip(action, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m EPSILON, \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m EPSILON)\n\u001b[0;32m---> 31\u001b[0m observation \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_observation_stacked\u001b[49m() \u001b[38;5;66;03m#env.get_observation()\u001b[39;00m\n\u001b[1;32m     32\u001b[0m next_observation, reward, done, info \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m info[accept_trajectory_key] \u001b[38;5;129;01mand\u001b[39;00m j \u001b[38;5;241m>\u001b[39m num_steps:\n",
-      "File \u001b[0;32m~/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    240\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccessing private attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is prohibited\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 241\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/core.py:241\u001b[0m, in \u001b[0;36mWrapper.__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    239\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m name\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    240\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccessing private attribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m is prohibited\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 241\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mgetattr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Widow250PickPlaceEnv' object has no attribute 'get_observation_stacked'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gymnasium as gym\n",
     "import numpy as np\n",
@@ -163,12 +121,12 @@
     "action_noise = NormalActionNoise(mean=np.zeros(n_actions), sigma=0.1 * np.ones(n_actions))\n",
     "\n",
     "# optimize_memory_usage=True,\n",
-    "model = TD3(\"MultiInputPolicy\", env, buffer_size=100000, action_noise=action_noise, learning_rate=0.01, \\\n",
+    "model = TD3(\"MultiInputPolicy\", env, buffer_size=120000, action_noise=action_noise, learning_rate=0.05, \\\n",
     "            tensorboard_log=\"data/td3\", verbose=1, learning_starts=0) #noise Required for deterministic policy\n",
     "\n",
     "COLLECT=True\n",
     "if COLLECT:\n",
-    "    collect_data(env, model, \"grasp\", \"grasp_success_target\", 4000, 30)\n",
+    "    collect_data(env, model, \"grasp\", \"grasp_success_target\", 4000, 30) #\"pickplace\", \"place_success_target\",\n",
     "    model.save_replay_buffer(f\"data/td3_expert_grasp\")\n",
     "else:\n",
     "    print(\"load_replay_buffer\")\n",
@@ -179,8 +137,8 @@
     "model.train(gradient_steps=10000)\n",
     "\n",
     "print(\"start learning\")\n",
-    "for i in range(3):\n",
-    "    model.learn(total_timesteps=20000, log_interval=10, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "for i in range(5):\n",
+    "    model.learn(total_timesteps=20000, log_interval=20, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
     "    model.save(\"data/td3\")\n",
     "    model.save_replay_buffer(f\"data/td3_expert_grasp{i+1}\")\n",
     "    #model.replay_buffer.reset()\n",
