--- a/sim.ipynb
+++ b/sim.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python demos.py --disp --task=place-red-in-green --mode=train --n=10"
+    "! python demos.py --disp --task=place-red-in-green --mode=train --n=10\n",
+    "! python demos.py --disp --task=place-red-in-green --mode=test --n=100\n",
+    "! python train.py --task=place-red-in-green --agent=transporter --n_demos=10 --gpu_limit=4\n",
+    "! python test.py --task=place-red-in-green --agent=transporter --n_demos=10 --n_steps=1000\n",
+    "! python test.py --task=place-red-in-green --agent=transporter --n_demos=10 --n_steps=1000 --gpu_limit=4"
    ]
   }
  ],
