--- a/sim.ipynb
+++ b/sim.ipynb
@@ -102,7 +102,136 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:25: UserWarning: \u001b[33mWARN: It seems a Box observation space is an image but the upper and lower bounds are not in [0, 255]. Generally, CNN policies assume observations are within that range, so you may encounter an issue if the observation values are not.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
+      "  logger.deprecation(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(done, (bool, np.bool8)):\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:165: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
+      "  logger.warn(f\"{pre} is not within the observation space.\")\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_trajectories: 100 success rate: 0.9523809523809523\n",
+      "num_trajectories: 200 success rate: 0.9523809523809523\n",
+      "num_trajectories: 300 success rate: 0.9523809523809523\n",
+      "num_trajectories: 400 success rate: 0.954653937947494\n",
+      "num_trajectories: 500 success rate: 0.9541984732824428\n",
+      "num_trajectories: 600 success rate: 0.9538950715421304\n",
+      "num_trajectories: 700 success rate: 0.9549795361527967\n",
+      "num_trajectories: 800 success rate: 0.954653937947494\n",
+      "num_trajectories: 900 success rate: 0.9533898305084746\n",
+      "num_trajectories: 1000 success rate: 0.9523809523809523\n",
+      "num_trajectories: 1100 success rate: 0.9499136442141624\n",
+      "num_trajectories: 1200 success rate: 0.9508716323296355\n",
+      "num_trajectories: 1300 success rate: 0.9530791788856305\n",
+      "num_trajectories: 1400 success rate: 0.9517335146159075\n",
+      "num_trajectories: 1500 success rate: 0.9505703422053232\n",
+      "num_trajectories: 1600 success rate: 0.9506833036244801\n",
+      "num_trajectories: 1700 success rate: 0.9486607142857143\n",
+      "num_trajectories: 1800 success rate: 0.9498680738786279\n",
+      "num_trajectories: 1900 success rate: 0.9504752376188094\n",
+      "num_trajectories: 2000 success rate: 0.9505703422053232\n",
+      "num_trajectories: 2100 success rate: 0.9506564056133997\n",
+      "num_trajectories: 2200 success rate: 0.9519688446559931\n",
+      "num_trajectories: 2300 success rate: 0.9511993382961125\n",
+      "num_trajectories: 2400 success rate: 0.9504950495049505\n",
+      "num_trajectories: 2500 success rate: 0.9505703422053232\n",
+      "num_trajectories: 2600 success rate: 0.9499451954694922\n",
+      "num_trajectories: 2600 success rate: 0.9495982468955442\n",
+      "num_trajectories: 2700 success rate: 0.9497010200492437\n",
+      "num_trajectories: 2800 success rate: 0.9488309047780413\n",
+      "num_trajectories: 2900 success rate: 0.948642459928034\n",
+      "num_trajectories: 3000 success rate: 0.9481668773704172\n",
+      "num_trajectories: 3100 success rate: 0.9480122324159022\n",
+      "num_trajectories: 3200 success rate: 0.948429164196799\n",
+      "num_trajectories: 3300 success rate: 0.9482758620689655\n",
+      "num_trajectories: 3400 success rate: 0.9491903964265773\n",
+      "num_trajectories: 3500 success rate: 0.9492812584757255\n",
+      "num_trajectories: 3600 success rate: 0.9496175151675019\n",
+      "num_trajectories: 3700 success rate: 0.9482316760635572\n",
+      "num_trajectories: 3800 success rate: 0.9481037924151696\n",
+      "num_trajectories: 3900 success rate: 0.9484435797665369\n",
+      "num_trajectories: 4000 success rate: 0.9487666034155597\n",
+      "success rate: 0.9487666034155597\n",
+      "start pre-training from buffer only\n",
+      "Logging to data/td3/exp_36\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0b8b15930a324001887445bfa454e805",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import gymnasium as gym\n",
     "import numpy as np\n",
@@ -124,7 +253,7 @@
     "model = TD3(\"MultiInputPolicy\", env, buffer_size=120000, action_noise=action_noise, learning_rate=0.05, \\\n",
     "            tensorboard_log=\"data/td3\", verbose=1, learning_starts=0) #noise Required for deterministic policy\n",
     "\n",
-    "COLLECT=True\n",
+    "COLLECT=False\n",
     "if COLLECT:\n",
     "    collect_data(env, model, \"grasp\", \"grasp_success_target\", 4000, 30) #\"pickplace\", \"place_success_target\",\n",
     "    model.save_replay_buffer(f\"data/td3_expert_grasp\")\n",
@@ -138,7 +267,7 @@
     "\n",
     "print(\"start learning\")\n",
     "for i in range(5):\n",
-    "    model.learn(total_timesteps=20000, log_interval=20, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "    model.learn(total_timesteps=50000, log_interval=50, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
     "    model.save(\"data/td3\")\n",
     "    model.save_replay_buffer(f\"data/td3_expert_grasp{i+1}\")\n",
     "    #model.replay_buffer.reset()\n",
